--- a/Gerador.html
+++ b/Gerador.html
@@ -7044,7 +7044,6 @@ console.log('🔥 URL do canal:', channel.url);
 console.log('---');
 
                             channelCard.innerHTML = `
-                            channelCard.setAttribute('data-channel', channel.id);
     ${channel.logo && channel.logo !== DEFAULT_LOGO ? `<img src="${channel.logo}" class="channel-logo-small" alt="Logo">` : `<img src="${DEFAULT_LOGO}" class="channel-logo-small" alt="Logo Padrão">`}
     <div class="channel-name-with-emoji">
         <h3>${channel.name}</h3>
@@ -7068,7 +7067,11 @@ console.log('---');
     <button class="delete-channel delete-button" data-id="${channel.id}">Apagar</button>
 </div>
 `;
-                            channelsList.appendChild(channelCard);// Na função carregarCanais(), dentro do loop que cria os cards dos canais:
+                            
+                            // Adicionar identificador ao card para localizar depois
+                            channelCard.setAttribute('data-channel', channel.id);
+                            channelsList.appendChild(channelCard);
+
 if (!isOffline && isPublished) {
     // 🔥 AGORA USAR O ID DO FIRESTORE (não o nome formatado)
     const channelIdForFirebase = channel.id;  // ← MUDEI AQUI!
