--- a/monetizar.html
+++ b/monetizar.html
@@ -483,7 +483,7 @@
                 <h3>3. Comerciais Pagos</h3>
                 
                 <div class="info-box">
-                    <p><strong>Como funciona:</strong> Qualquer pessoa pode inserir um comercial no seu canal pagando por segundo de exibição. O sistema é totalmente automatizado e os pagamentos caem direto na sua conta via Mercado Pago.</p>
+                    <p><strong>Como funciona:</strong> Qualquer pessoa pode inserir um comercial no seu canal pagando por segundo de exibição. O sistema é totalmente automatizado e você recebe 92% do valor, 8% é a comissão da plataforma.</p>
                 </div>
                 
                 <!-- Status da conexão -->
