--- a/Gerador.html
+++ b/Gerador.html
@@ -4736,8 +4736,8 @@ if (slotIndex === currentPlayingSlot) {
                 <strong>O conteúdo será liberado imediatamente após o clique no botão abaixo.</strong>
             </p>
             
-                       <div style="background: rgba(253, 187, 45, 0.1); padding: 15px; border-radius: 8px; margin-bottom: 25px; border-left: 4px solid #fdbb2d; display: flex; align-items: center; gap: 15px;"><img src="${dados.logo || DEFAULT_LOGO}" class="channel-logo" alt="Logo">
-<h1 class="channel-name">${dados.name}</h1>
+                       <div style="background: rgba(253, 187, 45, 0.1); padding: 15px; border-radius: 8px; margin-bottom: 25px; border-left: 4px solid #fdbb2d; display: flex; align-items: center; gap: 15px;">
+                <img src="${dados.logo || DEFAULT_LOGO}" style="width: 50px; height: 50px; border-radius: 8px; border: 2px solid #fdbb2d; object-fit: cover;">
                 <div>
                     <p style="color: rgba(255,255,255,0.9); margin: 0; font-size: 0.95rem;">
                         <strong>Você está acessando:</strong><br>
