--- a/Gerador.html
+++ b/Gerador.html
@@ -4736,8 +4736,7 @@ if (slotIndex === currentPlayingSlot) {
                 <strong>O conteúdo será liberado imediatamente após o clique no botão abaixo.</strong>
             </p>
             
-                       <div style="background: rgba(253, 187, 45, 0.1); padding: 15px; border-radius: 8px; margin-bottom: 25px; border-left: 4px solid #fdbb2d; display: flex; align-items: center; gap: 15px;">
-                <img src="${dados.logo || DEFAULT_LOGO}" style="width: 50px; height: 50px; border-radius: 8px; border: 2px solid #fdbb2d; object-fit: cover;">
+                       <div style="background: rgba(253, 187, 45, 0.1); padding: 15px; border-radius: 8px; margin-bottom: 25px; border-left: 4px solid #fdbb2d; display: flex; align-items: center; gap: 15px;">                <img src="${dados.logo || DEFAULT_LOGO}" style="width: 50px; height: 50px; border-radius: 8px; border: 2px solid #fdbb2d; object-fit: cover;">
                 <div>
                     <p style="color: rgba(255,255,255,0.9); margin: 0; font-size: 0.95rem;">
                         <strong>Você está acessando:</strong><br>
@@ -4761,11 +4760,10 @@ if (slotIndex === currentPlayingSlot) {
         <div id="mainContent">
         <div class="container" style="position: relative; z-index: 1;">
 
-
-        <div class="channel-header">
-    <img src="${dados.logo || DEFAULT_LOGO}" class="channel-logo" alt="Logo" style="width: 120px; height: 120px; margin-bottom: 15px;">
-    <h1 class="channel-name" style="margin-top: 10px;">${dados.name}</h1>
-</div>
+        <div class="channel-header" style="display: flex; flex-direction: column; align-items: center; margin-bottom: 20px;">
+            <img src="${dados.logo || DEFAULT_LOGO}" style="width: 180px; height: 180px; border-radius: 12px; margin-bottom: 10px; object-fit: cover;">
+            <h1 style="font-size: 2rem; text-align: center; margin: 0;">${dados.name}</h1>
+        </div>
 
         <p class="subtitle">${dados.slogan}</p>
         
@@ -4837,20 +4835,21 @@ ${supportButtonHTML}${customButtonHTML}
             </div>
         </div>
    ${debugSection}
-                <!-- 🔥 SEÇÃO DE ANÚNCIO -->
-        <div style="margin: 20px auto; max-width: 800px; text-align: center;">
-            <div style="background: rgba(255,255,255,0.05); padding: 10px; border-radius: 8px;">
-                <div style="min-height: 90px; display: flex; align-items: center; justify-content: center;">
-                    <script>
-                        atOptions = {
-                            'key' : '03595bce358c328a01af3bb6f742d8ff',
-                            'format' : 'iframe',
-                            'height' : 90,
-                            'width' : 728,
-                            'params' : {}
-                        };
-                    <\/script>
-                    <script src="https://resentmentsadflew.com/03595bce358c328a01af3bb6f742d8ff/invoke.js"><\/script>
+                <!-- 🔥 SEÇÃO DE ANÚNCIO -->    <div style="margin: 20px auto; max-width: 100%; width: 100%; padding: 0 10px; text-align: center; box-sizing: border-box;">
+            <div style="background: rgba(255,255,255,0.05); padding: 10px; border-radius: 8px; overflow: hidden;">
+                <div style="position: relative; padding-bottom: 12.36%; height: 0; overflow: hidden; max-width: 100%;">
+                    <div id="adsterra-banner" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
+                        <script>
+                            atOptions = {
+                                'key' : '03595bce358c328a01af3bb6f742d8ff',
+                                'format' : 'iframe',
+                                'height' : 90,
+                                'width' : 728,
+                                'params' : {}
+                            };
+                        <\/script>
+                        <script src="https://resentmentsadflew.com/03595bce358c328a01af3bb6f742d8ff/invoke.js"><\/script>
+                    </div>
                 </div>
                 <p style="font-size: 0.8rem; margin-top: 10px; opacity: 0.7;">Anúncio patrocinado</p>
             </div>
