--- a/Gerador.html
+++ b/Gerador.html
@@ -6901,12 +6901,11 @@ async function publicarCanal(nomeCanal, dadosGerador) {
             method: "POST",
             headers: {
                 "Content-Type": "application/json",
-            },
-            body: JSON.stringify({
-                channelId: nomeCanal, // 🔥 ENVIAR NOME DO CANAL, não o ID do Firestore
-                videos: videosParaSalvar,
-                programmingMode: dadosGerador.programmingMode
-            })
+            },body: JSON.stringify({
+    channelId: currentChannelId,
+    videos: videosParaSalvar,
+    programmingMode: dadosGerador.programmingMode
+})
         });
         
         if (!saveVideosResponse.ok) {
