--- a/Gerador.html
+++ b/Gerador.html
@@ -2583,6 +2583,10 @@ console.log('CHANNEL_ID final:', channelId);
         });
     <\/script>` : '';
     
+    // ==================== SISTEMA DE VÍDEOS PROTEGIDOS ====================
+    ${videoSecuritySystem}
+    
+
     // Gerar lista de programas (modo grade)
     const programasArray = dados.programas ? dados.programas.map((program, index) => ({
         id: index,
