--- a/Gerador.html
+++ b/Gerador.html
@@ -2347,7 +2347,7 @@ function determinarDataEstreia(dadosGerador) {
         }
 
         // Função para gerar HTML do canal (ATUALIZADA COM NOVA LÓGICA DE DATA)
-function gerarHTMLdoCanal(dados, documentId) {
+function gerarHTMLdoCanal(dados, channelId) {
 
     const isOffline = dados.isOffline || false;
     const visibility = dados.visibility || 'brazil';
