--- a/Gerador.html
+++ b/Gerador.html
@@ -4973,7 +4973,10 @@ const TV_PLAYLIST = ${JSON.stringify(
         }
         
         const auth = firebase.auth();
+        const db = firebase.firestore();
+        const rtdb = firebase.database();
         const database = firebase.database();
+
         
         // VARIÁVEIS DE ESTADO
         let currentState = 'program';
