--- a/Gerador.html
+++ b/Gerador.html
@@ -4992,6 +4992,8 @@ ${supportButtonHTML}${customButtonHTML}
     
     <script>
         // CONFIGURAÇÕES DO CANAL
+const TV_PROGRAMS = ${JSON.stringify(programasArray)};
+const TV_PLAYLIST = ${JSON.stringify(playlistArray)};
         const PROGRAMMING_MODE = "${programmingMode}";const TOTAL_PROGRAMS = ${dados.programas ? dados.programas.length : 0};
 const TOTAL_PLAYLIST_VIDEOS = ${totalPlaylistVideos};
 const PROGRAM_VIDEO_COUNTS = ${JSON.stringify(
