--- a/Gerador.html
+++ b/Gerador.html
@@ -1,4 +1,4 @@
-E html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head> 
     <meta charset="UTF-8">
@@ -10035,3 +10035,4 @@ toScreen3Btn.addEventListener('click', () => {
     </script>
 </body>
 </html>
+
