--- a/Gerador.html
+++ b/Gerador.html
@@ -2372,13 +2372,15 @@ function gerarHTMLdoCanal(dados, channelId) {
     
     let supportButtonHTML = '';
     let customButtonHTML = '';
-    // 🔥 BOTÕES DE MONETIZAÇÃO - LÓGICA CORRIGIDA
+
+
+// 🔥 BOTÕES DE MONETIZAÇÃO - LÓGICA CORRIGIDA
 if (!isOffline) {
     // 🔥 NOVO: Botão "Inserir comercial" - aparece quando comerciais pagos estão ativos
     let insertCommercialButtonHTML = '';
     if (dados.monetization?.paidCommercials?.enabled) {
         insertCommercialButtonHTML = `
-        <a href="https://canaisdetv.online/comercial.html" target="_blank" class="monetization-button" style="background: #9b59b6;">
+        <a href="https://canaisdetv.online/comercial.html" target="_blank" class="monetization-button purple-button">
             Inserir comercial
         </a>`;
     }
@@ -2388,14 +2390,14 @@ if (!isOffline) {
         supportButtonHTML = `
         <div style="text-align: center; margin: 20px 0;">
             ${insertCommercialButtonHTML}
-            <button id="supportButton" class="monetization-button" style="background: #2ecc71;">
+            <button id="supportButton" class="monetization-button green-button">
                 ❤️ Apoiar
             </button>`;
         
         // Adiciona botão personalizado SE existir
         if (hasCustomButton) {
             supportButtonHTML += `
-            <a href="${customButton.url}" target="_blank" class="monetization-button" style="background: #3498db;">
+            <a href="${customButton.url}" target="_blank" class="monetization-button blue-button">
                 ${customButton.text}
             </a>`;
         }
@@ -2407,7 +2409,7 @@ if (!isOffline) {
         customButtonHTML = `
         <div style="text-align: center; margin: 20px 0;">
             ${insertCommercialButtonHTML}
-            <a href="${customButton.url}" target="_blank" class="monetization-button" style="background: #3498db;">
+            <a href="${customButton.url}" target="_blank" class="monetization-button blue-button">
                 ${customButton.text}
             </a>
         </div>`;
@@ -4632,64 +4634,69 @@ if (slotIndex === currentPlayingSlot) {
 /* 🔥 ESTILOS PADRÃO PARA BOTÕES DE MONETIZAÇÃO */
 .monetization-button {
     display: inline-block;
-    color: white;
+    color: white !important;
     border: none;
-    padding: 12px 24px;
-    border-radius: 8px;
+    padding: 12px 24px !important;
+    border-radius: 8px !important;
     text-decoration: none;
-    font-weight: bold;
-    font-size: 1.1rem;
+    font-weight: bold !important;
+    font-size: 1.1rem !important;
     cursor: pointer;
     text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
     margin: 5px;
-    height: 46px; /* Altura fixa para padronização */
-    line-height: 22px; /* Centraliza o texto verticalmente */
+    height: 46px;
+    line-height: 22px;
     text-align: center;
     vertical-align: middle;
     box-sizing: border-box;
     transition: all 0.3s ease;
-    min-width: 120px; /* Largura mínima para consistência */
+    min-width: 140px;
+    border: 2px solid transparent !important;
 }
 
 .monetization-button:hover {
     transform: translateY(-2px);
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    opacity: 0.9;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    opacity: 0.95;
 }
 
-.monetization-button:active {
-    transform: translateY(0);
-    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-}
-
-/* Estilo específico para o botão Inserir comercial (púrpura) */
-.monetization-button[style*="background: #9b59b6"] {
+/* Botão Púrpura (Inserir comercial) */
+.purple-button {
     background: linear-gradient(135deg, #9b59b6, #8e44ad) !important;
-    border: 2px solid #8e44ad;
+    border-color: #8e44ad !important;
 }
 
-/* Estilo específico para o botão Apoiar (verde) */
+/* Botão Verde (Apoiar) */
+.green-button {
+    background: linear-gradient(135deg, #2ecc71, #27ae60) !important;
+    border-color: #27ae60 !important;
+}
+
+/* Botão Azul (Personalizado) */
+.blue-button {
+    background: linear-gradient(135deg, #3498db, #2980b9) !important;
+    border-color: #2980b9 !important;
+}
+
+/* Estilo específico para botão com ID (para garantir) */
 #supportButton {
     background: linear-gradient(135deg, #2ecc71, #27ae60) !important;
-    border: 2px solid #27ae60;
-}
-
-/* Estilo específico para botão personalizado (azul) */
-.monetization-button[style*="background: #3498db"] {
-    background: linear-gradient(135deg, #3498db, #2980b9) !important;
-    border: 2px solid #2980b9;
+    border: 2px solid #27ae60 !important;
+    color: white !important;
+    font-weight: bold !important;
 }
 
 /* Responsividade para mobile */
 @media (max-width: 768px) {
     .monetization-button {
-        width: 100%;
+        width: 90%;
         max-width: 300px;
-        margin: 5px auto;
+        margin: 8px auto;
         display: block;
+        padding: 14px 24px !important;
     }
 }
-        }
+
 /* 🔥 Estilos para Lightbox de Doação */
 #donationLightbox {
     display: none;
