--- a/Gerador.html
+++ b/Gerador.html
@@ -4986,10 +4986,10 @@ if (slotIndex === currentPlayingSlot) {
         </div>        
 
 
-<!-- 🔥 BOTÕES DE MONETIZAÇÃO -->
+// 🔥 BOTÕES DE MONETIZAÇÃO
 <div style="text-align: center; margin: 20px 0; padding: 10px;">
     ${dados.monetization?.paidCommercials?.enabled ? `
-    <a href="https://canaisdetv.online/comercial.html" target="_blank" 
+    <a href="https://canaisdetv.online/comercial.html?channelId=${channelId}" target="_blank" 
        style="display: inline-block; background: linear-gradient(135deg, #9b59b6, #8e44ad); color: white; padding: 12px 24px; border-radius: 8px; text-decoration: none; font-weight: bold; font-size: 1.1rem; margin: 5px; border: 2px solid #8e44ad; min-height: 46px; line-height: 22px; vertical-align: middle; box-sizing: border-box;">
         Inserir comercial
     </a>
