--- a/Gerador.html
+++ b/Gerador.html
@@ -4986,7 +4986,7 @@ if (slotIndex === currentPlayingSlot) {
         </div>        
 
 
-// 🔥 BOTÕES DE MONETIZAÇÃO
+//BOTÕES DE MONETIZAÇÃO
 <div style="text-align: center; margin: 20px 0; padding: 10px;">
     ${dados.monetization?.paidCommercials?.enabled ? `
     <a href="https://canaisdetv.online/comercial.html?channelId=${channelId}" target="_blank" 
