--- a/Gerador.html
+++ b/Gerador.html
@@ -14,18 +14,13 @@
             box-sizing: border-box;
         }
         
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, 
-        #1a2a6c 0%, 
-        #b21f1f 25%, 
-        #fdbb2d 50%, 
-        #b21f1f 75%, 
-        #1a2a6c 100%);
-    color: white;
-    min-height: 100vh;
-    padding: 20px;
-}
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #1a2a6c, #b21f1f, #ffa500);
+            color: white;
+            min-height: 100vh;
+            padding: 20px;
+        }
         
         .container {
             max-width: 1200px;
