--- a/Gerador.html
+++ b/Gerador.html
@@ -2374,7 +2374,8 @@ function gerarHTMLdoCanal(dados, channelId) {
     
     // 🔥 BOTÕES DE MONETIZAÇÃO - LÓGICA CORRIGIDA
 if (!isOffline) {
-    // 🔥 NOVO: Botão "Inserir comercial" - aparece quando comerciais pagos estão ativoslet insertCommercialButtonHTML = '';
+    // 🔥 NOVO: Botão "Inserir comercial" - aparece quando comerciais pagos estão ativos
+let insertCommercialButtonHTML = '';
 if (dados.monetization?.paidCommercials?.enabled) {
     // Usar o channelId real (não temporário)
     let commercialChannelId = channelId;
@@ -2390,7 +2391,7 @@ if (dados.monetization?.paidCommercials?.enabled) {
     }
     
     insertCommercialButtonHTML = `
-    <a href="https://canaisdetv.online/comercial.html?channelId=${commercialChannelId}" target="_blank" style="display: inline-block; background: #9b59b6; color: white; padding: 12px 24px; border-radius: 8px; text-decoration: none; font-weight: bold; font-size: 1.1rem; text-shadow: 1px 1px 2px rgba(0,0,0,0.3); margin: 5px;">
+    <a href="https://canaisdetv.online/comercial.html?channelId=${commercialChannelId}" style="display: inline-block; background: #9b59b6; color: white; padding: 12px 24px; border-radius: 8px; text-decoration: none; font-weight: bold; font-size: 1.1rem; text-shadow: 1px 1px 2px rgba(0,0,0,0.3); margin: 5px;">
         Inserir comercial
     </a>`;
 }
