--- a/Gerador2.html
+++ b/Gerador2.html
@@ -8145,17 +8145,17 @@ showScreen('screen6');
             programCard.className = 'program-card';
             programCard.id = programId;
             
-            const isExpanded = program.videos && program.videos.length > 0;
+                        const isExpanded = false;
             
             programCard.innerHTML = `
                 <div class="program-header">
                     <div class="program-title">
-                        <button class="expand-btn" data-program="${programId}">${isExpanded ? '▼' : '▶'}</button>
+                        <button class="expand-btn" data-program="${programId}">▶</button>
                         <h3>Programa ${index + 1}${program.name ? `: ${program.name}` : ''}</h3>
                     </div>
                     <button type="button" class="remove-program delete-button" data-program="${programId}">Remover</button>
                 </div>
-                <div class="program-body" style="display: ${isExpanded ? 'block' : 'none'};">
+                <div class="program-body" style="display: none;">
                     <div class="form-group">
                         <label for="${programId}-name">Nome do Programa (máx. 50 caracteres):</label>
                         <input type="text" id="${programId}-name" maxlength="50" value="${program.name || ''}" placeholder="Ex: Sessão Anime" required>
