--- a/Gerador.html
+++ b/Gerador.html
@@ -1902,20 +1902,32 @@
             measurementId: "G-1QRKY0NN0W",
             databaseURL: "https://playtronic-tv-default-rtdb.firebaseio.com"
         };
+// Inicializar Firebase
+let auth, db, rtdb;
 
-        // Inicializar Firebase
 try {
-    if (typeof firebase !== 'undefined' && (!firebase.apps || firebase.apps.length === 0)) {
-        firebase.initializeApp(firebaseConfig);
-        console.log('Firebase inicializado');
+    if (typeof firebase !== 'undefined') {
+        // Verifica se o Firebase já foi inicializado
+        if (!firebase.apps.length) {
+            firebase.initializeApp(firebaseConfig);
+            console.log('✅ Firebase inicializado com sucesso');
+        } else {
+            console.log('✅ Firebase já estava inicializado');
+        }
+        
+        // Só inicializa as variáveis APÓS confirmar que o Firebase está pronto
+        auth = firebase.auth();
+        db = firebase.firestore();
+        rtdb = firebase.database();
+        
+        console.log('✅ Módulos do Firebase configurados');
+    } else {
+        console.error('❌ Firebase SDK não carregado');
     }
 } catch (error) {
-    console.error('Erro ao inicializar Firebase:', error);
+    console.error('❌ Erro crítico ao inicializar Firebase:', error);
+    alert('Erro ao conectar com o servidor. Recarregue a página e tente novamente.');
 }
-
-        const auth = firebase.auth();
-        const db = firebase.firestore();
-        const rtdb = firebase.database();
 
         // ==================== VARIÁVEIS GLOBAIS ====================
         let currentUser = null;
